--- a/index.html
+++ b/index.html
@@ -2,95 +2,149 @@
 <html lang="pt-br"> <!--para deixar na linguagem pt-br-->
 
 <head>
-    <meta charset="utf-8"/> <!--para arrumar a acentuação-->
+    <meta charset="utf-8" /> <!--para arrumar a acentuação-->
     <title>Tudo sobre Google Glass</title> <!--criação de um titulo-->
-    <link rel="stylesheet" type="text/css" href="_css/estilo.css"/> <!--serve para fazer uma ligação entre o html e o css-->
+    <link rel="stylesheet" type="text/css" href="_css/estilo.css" />
+    <!--serve para fazer uma ligação entre o html e o css-->
 
 </head>
 
 <body>
 
-<div id="interface"> <!--para criarmos uma divisão-->
-    <header id="cabecalho"> <!--aqui serviu para delimitarmos o cabeçalho-->
-    <hgroup> <!--para agrupar o titulo e subtitulo-->
-    <h1>Google Glass</h1>
-    <h2>A revolução do Google está chegando</h2>
-    </hgroup>
+    <div id="interface"> <!--para criarmos uma divisão-->
+        <header id="cabecalho"> <!--aqui serviu para delimitarmos o cabeçalho-->
+            <hgroup> <!--para agrupar o titulo e subtitulo-->
+                <h1>Google Glass</h1>
+                <h2>A revolução do Google está chegando</h2>
+            </hgroup>
 
-    <img id="icone" src="_imagens/glass-oculos-preto-peq.png" alt="óculos preto da lente transparente da google com Tecnologia"> <!--aqui colocamos uma imagem e descrevemos ela-->
+            <img id="icone" src="_imagens/glass-oculos-preto-peq.png"
+                alt="óculos preto da lente transparente da google com Tecnologia">
+            <!--aqui colocamos uma imagem e descrevemos ela-->
 
-<nav id="menu"> <!--menu de navegação-->
-    <h1>Menu Principal</h1>
-<ul> <!--uma lista ordenada com links-->
-    <li><a href="index.html">Home</a></li>
-    <li><a href="specs.html">Especificações</a></li>
-    <li><a href="fotos.html">Fotos</a></li>
-    <li><a href="multimidia.html">Multimídia</a></li>
-    <li><a href="fale-conosco.html">Fale conosco</a></li>
-</ul>
-</nav>    
-    </header>
+            <nav id="menu"> <!--menu de navegação-->
+                <h1>Menu Principal</h1>
+                <ul> <!--uma lista ordenada com links-->
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="specs.html">Especificações</a></li>
+                    <li><a href="fotos.html">Fotos</a></li>
+                    <li><a href="multimidia.html">Multimídia</a></li>
+                    <li><a href="fale-conosco.html">Fale conosco</a></li>
+                </ul>
+            </nav>
+        </header>
 
-<section id="corpo"> 
-<hgroup> <!--definimos um grupo de titulos-->
-<h3>Tecnologia > Inovações</h3>
-<h1>Saiba tudo sobre o Google Glass</h1>
-<h2>por Gustavo Guanabara</h2>
-<h3>Atualizado em 23/Abril/2013</h3>
-</hgroup>
+        <main>
+            <section id="corpo">
+                <hgroup> <!--definimos um grupo de titulos-->
+                    <h3>Tecnologia > Inovações</h3>
+                    <h1>Saiba tudo sobre o Google Glass</h1>
+                    <h2>por Gustavo Guanabara</h2>
+                    <h3>Atualizado em 23/Abril/2013</h3>
+                </hgroup>
 
-<h2>O que é</h2>
-<!--o <p> serve para informar que é um paragrafo-->
-<p>O <b>Google Glass</b><!--para ficar em negrito--> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <a href="http://glass.google.com" target="_blank">Project Glass</a><!--para colocar um link no site e abrir em outra aba-->, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeo&shy;<!--serve para dividir a palavra e colocar o - -->conferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o Google Glass encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p> 
+                <h2>O que é</h2>
+                <!--o <p> serve para informar que é um paragrafo-->
+                <p>O <b>Google Glass</b><!--para ficar em negrito--> é um acessório em forma de óculos que possibilita a
+                    interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <a
+                        href="http://glass.google.com" target="_blank">Project
+                        Glass</a><!--para colocar um link no site e abrir em outra aba-->, o eletrônico é capaz de tirar
+                    fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar
+                    vídeo&shy;<!--serve para dividir a palavra e colocar o - -->conferências. Seu lançamento está
+                    previsto
+                    para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o Google Glass encontra-se em fase de
+                    testes
+                    e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas
+                    registrou
+                    novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 
-<figure class="foto-legenda"> <!--serve para colocar imagens e dar um significado semantico para elas-->
-    <img src="_imagens/glass-quadro-homem-mulher.jpg" alt="um homem e uma mulher, ambos sorrindo e usando o google glass"/>
-    <figcaption> <!--posso criar legendas para as imagens usando essa tag-->
-        <h3>Google Glass</h3>
-        <p>Uma nova maneira de ver o mundo.</p>
-    </figcaption>
-</figure>
+                <figure class="foto-legenda"> <!--serve para colocar imagens e dar um significado semantico para elas-->
+                    <img src="_imagens/glass-quadro-homem-mulher.jpg"
+                        alt="um homem e uma mulher, ambos sorrindo e usando o google glass" />
+                    <figcaption> <!--posso criar legendas para as imagens usando essa tag-->
+                        <h3>Google Glass</h3>
+                        <p>Uma nova maneira de ver o mundo.</p>
+                    </figcaption>
+                </figure>
 
-<h2>Data de lançamento</h2>
-<p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
+                <h2>Data de lançamento</h2>
+                <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja
+                    disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo
+                    menos,
+                    2014.</p>
 
-<h1>Especificações Técnicas</h1>
-<table id="tabelaspec"> <!--criando uma tabela-->
-<caption>Tabela Técnica do Google Glass <span>Mar/2013</span></caption>
+                <h1>Especificações Técnicas</h1>
+                <table id="tabelaspec"> <!--criando uma tabela-->
+                    <caption>Tabela Técnica do Google Glass <span>Mar/2013</span></caption>
 
-<tr><td class="ce">Tela</td><td class="cd">Resolução equivalente a tela de 25"</td></tr>
-<tr><td rowspan="2" class="ce">Camera</td><td class="cd"> 5MP para fotos </td></tr>
-<tr><td class="cd"> 720p para vídeos</td></tr>
-<tr><td rowspan="2" class="ce">Conectividade</td><td class="cd"> Wi-Fi /td></tr>
-<tr><td class="cd">Bluetooth<</td></tr>
-<tr><td class="ce">Memória Interna</td><td class="cd"> 12GB</td></tr>
-</table>
+                    <tr>
+                        <td class="ce">Tela</td>
+                        <td class="cd">Resolução equivalente a tela de 25"</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2" class="ce">Camera</td>
+                        <td class="cd"> 5MP para fotos </td>
+                    </tr>
+                    <tr>
+                        <td class="cd"> 720p para vídeos</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2" class="ce">Conectividade</td>
+                        <td class="cd"> Wi-Fi /td>
+                    </tr>
+                    <tr>
+                        <td class="cd">Bluetooth<< /td>
+                    </tr>
+                    <tr>
+                        <td class="ce">Memória Interna</td>
+                        <td class="cd"> 12GB</td>
+                    </tr>
+                </table>
 
-<h1>Como funciona</h1>
-<p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como selecionar opções com o movimento da cabeça</p>
+                <h1>Como funciona</h1>
+                <p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED
+                    na
+                    parte superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar,
+                    assim como selecionar opções com o movimento da cabeça</p>
 
-<h1>O que você pode fazer com o Google Glasses</h1>
-<p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-<wbr/><!--serve para quebrarmos a palavra-->humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
+                <h1>O que você pode fazer com o Google Glasses</h1>
+                <p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de
+                    “super-<wbr/><!--serve para quebrarmos a palavra-->humano”, já que o aparelho pode indicar a quantos
+                    metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até
+                    mesmo
+                    permitir que você marque encontros apenas com comandos de voz.</p>
 
-[AQUI ENTRA UM VÍDEO]
-</section>
-<aside id="lateral">
-<h1>Outras Notícias</h1>
-<h2>Vídeo mais recente</h2>
+                [AQUI ENTRA UM VÍDEO]
+            </section>
+            <aside id="lateral">
+                <h1>Outras Notícias</h1>
+                <h2>Vídeo mais recente</h2>
 
-[AQUI ENTRA UM VÍDEO]
+                [AQUI ENTRA UM VÍDEO]
 
-<h2>Novidades no Glass</h2>
-<p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita no mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das hastes dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em determinados ossos de sua cabeça, sem usar nenhum tipo de alto-falante.</p>
+                <h2>Novidades no Glass</h2>
+                <p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda
+                    inédita
+                    no mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução.
+                    Através
+                    das hastes dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em
+                    determinados ossos de sua cabeça, sem usar nenhum tipo de alto-falante.</p>
 
-<p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5 metros de distância do espectador.</p>
-</aside>
-<footer id="rodape">
-<p>Copyright 2013 - by Gustavo Guanabara <br/>
-<a href="http://facebook.com/cursosemvideo" target="_blank">Facebook</a> | 
-<a href="http://twitter.com/cursosemvideo" target="_blank">Twitter</p></a>
+                <p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão
+                    640 x
+                    360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta
+                    definição
+                    colocado a 2,5 metros de distância do espectador.</p>
+            </aside>
+        </main>
+        <footer id="rodape">
+            <p>Copyright 2013 - by Gustavo Guanabara <br />
+                <a href="http://facebook.com/cursosemvideo" target="_blank">Facebook</a> |
+                <a href="http://twitter.com/cursosemvideo" target="_blank">Twitter
+            </p></a>
 
-</footer>
-</div>
+        </footer>
+    </div>
 </body>
+
 </html>
