update files path

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" /> <!--para arrumar a acentuação-->
     <title>Tudo sobre Google Glass</title> <!--criação de um titulo-->
-    <link rel="stylesheet" type="text/css" href="_css/estilo.css" />
+    <link rel="stylesheet" type="text/css" href="css/estilo.css" />
     <!--serve para fazer uma ligação entre o html e o css-->
 
 </head>
@@ -18,7 +18,7 @@
                 <h2>A revolução do Google está chegando</h2>
             </hgroup>
 
-            <img id="icone" src="_imagens/glass-oculos-preto-peq.png"
+            <img id="icone" src="imagens/glass-oculos-preto-peq.png"
                 alt="óculos preto da lente transparente da google com Tecnologia">
             <!--aqui colocamos uma imagem e descrevemos ela-->
 
@@ -59,7 +59,7 @@
                     novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 
                 <figure class="foto-legenda"> <!--serve para colocar imagens e dar um significado semantico para elas-->
-                    <img src="_imagens/glass-quadro-homem-mulher.jpg"
+                    <img src="imagens/glass-quadro-homem-mulher.jpg"
                         alt="um homem e uma mulher, ambos sorrindo e usando o google glass" />
                     <figcaption> <!--posso criar legendas para as imagens usando essa tag-->
                         <h3>Google Glass</h3>
