--- a/index.html
+++ b/index.html
@@ -36,13 +36,16 @@
 
         <main>
             <section id="corpo">
-                <hgroup> <!--definimos um grupo de titulos-->
-                    <h3>Tecnologia > Inovações</h3>
-                    <h1>Saiba tudo sobre o Google Glass</h1>
-                    <h2>por Gustavo Guanabara</h2>
-                    <h3>Atualizado em 23/Abril/2013</h3>
-                </hgroup>
 
+                <article id="noticia-principal">
+                    <header id="cabecalho-artigo">
+                    <hgroup> <!--definimos um grupo de titulos-->
+                        <h3>Tecnologia > Inovações</h3>
+                        <h1>Saiba tudo sobre o Google Glass</h1>
+                        <h2>por Gustavo Guanabara</h2>
+                        <h3>Atualizado em 23/Abril/2013</h3>
+                    </hgroup>
+                    </header>
                 <h2>O que é</h2>
                 <!--o <p> serve para informar que é um paragrafo-->
                 <p>O <b>Google Glass</b><!--para ficar em negrito--> é um acessório em forma de óculos que possibilita a
@@ -73,7 +76,7 @@
                     menos,
                     2014.</p>
 
-                <h1>Especificações Técnicas</h1>
+                <h2>Especificações Técnicas</h2>
                 <table id="tabelaspec"> <!--criando uma tabela-->
                     <caption>Tabela Técnica do Google Glass <span>Mar/2013</span></caption>
 
@@ -101,13 +104,13 @@
                     </tr>
                 </table>
 
-                <h1>Como funciona</h1>
+                <h2>Como funciona</h2>
                 <p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED
                     na
                     parte superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar,
                     assim como selecionar opções com o movimento da cabeça</p>
 
-                <h1>O que você pode fazer com o Google Glasses</h1>
+                <h2>O que você pode fazer com o Google Glasses</h2>
                 <p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de
                     “super-<wbr/><!--serve para quebrarmos a palavra-->humano”, já que o aparelho pode indicar a quantos
                     metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até
@@ -115,6 +118,7 @@
                     permitir que você marque encontros apenas com comandos de voz.</p>
 
                 [AQUI ENTRA UM VÍDEO]
+            </article>
             </section>
             <aside id="lateral">
                 <h1>Outras Notícias</h1>
